@@ -2,6 +2,7 @@ Changes are listed below, grouped under each point release of SuperCollider.
 
 
 * 2010-07-12 remove accidental debug messages from SCView (on mac, posted a lot of info to Console, could affect performance) - tb
+* 2010-10-10 remove more crufty NSLog debug messages - ds
 
 SuperCollider v3.4, released 2010-07
 ====================================
